--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,15 @@
     "issues": "https://github.com/chrispenny/silverstripe-data-object-to-fixture/issues"
   },
   "require": {
-    "php": "^7.1",
+    "php": "^7.4 || ^8.0",
     "silverstripe/vendor-plugin": "^1.0",
-    "silverstripe/framework": "^4@dev",
-    "silverstripe/cms": "^4@dev"
+    "silverstripe/framework": "^4.8",
+    "silverstripe/cms": "^4.8"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7",
-    "tractorcow/silverstripe-fluent": "^4.2.0"
+    "phpunit/phpunit": "^9.5",
+    "tractorcow/silverstripe-fluent": ">=4.2.0",
+    "slevomat/coding-standard": "~6.0"
   },
   "autoload": {
     "psr-4": {
