--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "tractorcow/silverstripe-fluent": ">=4.2.0",
-    "slevomat/coding-standard": "~6.0"
+    "slevomat/coding-standard": "^8"
   },
   "autoload": {
     "psr-4": {
