--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "tractorcow/silverstripe-fluent": ">=4.2.0",
-    "slevomat/coding-standard": "~6.0"
+    "slevomat/coding-standard": "^8"
   },
   "autoload": {
     "psr-4": {
@@ -33,5 +32,13 @@
     }
   },
   "prefer-stable": true,
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true,
+      "silverstripe/vendor-plugin": true,
+      "silverstripe/recipe-plugin": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
+  }
 }
