--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "php": "^7.4 || ^8.0",
     "silverstripe/vendor-plugin": "^1.0",
     "silverstripe/framework": "^4.8",
-    "silverstripe/cms": "^4.8"
+    "silverstripe/cms": "^4.8",
+    "dnadesign/silverstripe-populate": "^2.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
